--- a/32. Accessing Children of an Element _ JavaScript.html
+++ b/32. Accessing Children of an Element _ JavaScript.html
@@ -16,5 +16,9 @@
            <!-- p is parent of text. And text is children of p. -->
         <span>I am from Chemical Engineering Branch</span>
     </div>
+
+    <script>
+        console.log(document.body.lastChild)
+    </script>
 </body>
 </html>
